// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/helm-requirements/extract extractPackageFile() parses simple requirements.yaml correctly 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://kubernetes-charts.storage.googleapis.com/",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "https://kubernetes-charts.storage.googleapis.com/",
      ],
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() resolves aliased registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://my-registry.gcr.io/",
      ],
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() skips invalid registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "@placeholder",
      ],
      "skipReason": "placeholder-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "nope",
      ],
      "skipReason": "invalid-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "broken",
      "skipReason": "no-repository",
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() skips local dependencies 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://kubernetes-charts.storage.googleapis.com/",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "file:///some/local/path/",
      ],
      "skipReason": "local-dependency",
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() skips only invalid dependences 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": undefined,
      "depName": "postgresql",
      "skipReason": "invalid-version",
    },
    Object {
      "currentValue": "0.0.1",
      "depName": undefined,
      "skipReason": "invalid-name",
    },
    Object {
      "currentValue": "0.0.1",
      "depName": "redis",
      "skipReason": "no-repository",
    },
    Object {
      "currentValue": "0.0.1",
      "depName": "redis",
      "registryUrls": Array [
        "https://kubernetes-charts.storage.googleapis.com/",
      ],
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() validates name is present 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": undefined,
      "skipReason": "invalid-name",
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() validates name, repository and version are present 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": undefined,
      "depName": undefined,
      "skipReason": "invalid-version",
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() validates repository is present 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.0.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://kubernetes-charts.storage.googleapis.com/",
      ],
    },
  ],
}
`;

exports[`lib/manager/helm-requirements/extract extractPackageFile() validates version is present 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": undefined,
      "depName": "redis",
      "skipReason": "invalid-version",
    },
  ],
}
`;
